railway 1st attempt

--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>17</java.version>
+		<start-class>com.joaopd.blog.Application</start-class>
 	</properties>
 	<dependencies>
 
@@ -44,7 +45,6 @@
 			<scope>runtime</scope>
 		</dependency>
 
-
 	</dependencies>
 
 	<build>
@@ -52,15 +52,7 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<excludes>
-						<exclude>
-							<groupId>org.projectlombok</groupId>
-							<artifactId>lombok</artifactId>
-						</exclude>
-					</excludes>
-				</configuration>
-			</plugin>
+		</plugin>
 		</plugins>
 	</build>
 
