--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,2 +1,5 @@
-spring.datasource.url=jdbc:postgresql://ep-restless-dawn-a562y615.us-east-2.aws.neon.tech/myfinances?user=martins-joaopedro&password=GOZ0d2tcNCIm&sslmode=require
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.password=${PGUSER}
+spring.datasource.username=${PGPASSWORD}
+
+spring.jpa.hibernate.ddl-auto=create
