ci: updates prod profile

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -3,3 +3,4 @@ spring.datasource.password=${PGUSER}
 spring.datasource.username=${PGPASSWORD}
 
 spring.jpa.hibernate.ddl-auto=create
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
