--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.password=${PGUSER}
-spring.datasource.username=${PGPASSWORD}
+spring.datasource.password=${PGPASSWORD}
+spring.datasource.username=${PGUSER}
 
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
